--- a/core/erp/templates/sale/list.html
+++ b/core/erp/templates/sale/list.html
@@ -7,7 +7,9 @@
 
 {% block columns %}
     <tr>
-        <th scope="col" style="width: 10%">Nro</th>
+
+        <th scope="col" style="width: 5%">EXPAND</th>
+        <th scope="col" style="width: 5%">Nro</th>
         <th scope="col" style="width: 20%">Cliente</th>
         <th scope="col" style="width: 30%">Fecha de Registro</th>
         <th scope="col" style="width: 10%">Subtotal</th>
